fix about us page

--- a/ver/join-us.html
+++ b/ver/join-us.html
@@ -590,7 +590,7 @@
 <script src="https://web.archive.org/web/20240721071703js_/https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.tools.min.js"></script>
 <!-- SLIDER REVOLUTION 5.0 EXTENSIONS -->
 <script src="https://web.archive.org/web/20240721071703js_/https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.min.js"></script>
-<script src="https://web.archive.org/web/20240721071703js_/https://www.ltec-group.com/assets/js/main.js?t=1721546223"></script>
+<script src="https://ltec-group.vercel.app/assets/js/main.js?t=1721546223"></script>
 <script src="https://web.archive.org/web/20240721071703js_/https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revoulation.js"></script>
 
 </body></html>
