fix css for all pages

--- a/ver/services-infrastructure.html
+++ b/ver/services-infrastructure.html
@@ -453,7 +453,7 @@
 <div class="footer-address">
 <div class="bk-hover">
 <p>809 Bowsprit Rd Ste 105<br>Chula Vista CA 91914</p>
-<p><a href="mailto:info@ltec-group.com">info@ltec-group.com</a></p>
+<p><a href="mailto:info@ltec-group.vercel.app">info@ltec-group.vercel.app</a></p>
 <p><a href="tel:+16196142440">+1.619.614.2440</a></p>
 </div>
 <div class="social-share social--transparent text-white">
