--- a/ver/contact.html
+++ b/ver/contact.html
@@ -348,7 +348,7 @@
 </div>
 <div class="content">
 <h5 class="heading heading-h5">Email Address</h5>
-<p class="bk_pra"><a href="mailto:info@ltec-group.com">info@ltec-group.com</a></p>
+<p class="bk_pra"><a href="mailto:info@ltec-group.vercel.app">info@ltec-group.vercel.app</a></p>
 </div>
 </div>
 </div>
@@ -430,7 +430,7 @@
 <div class="footer-address">
 <div class="bk-hover">
 <p>809 Bowsprit Rd Ste 105<br>Chula Vista CA 91914</p>
-<p><a href="mailto:info@ltec-group.com">info@ltec-group.com</a></p>
+<p><a href="mailto:info@ltec-group.vercel.app">info@ltec-group.vercel.app</a></p>
 <p><a href="tel:+16196142440">+1.619.614.2440</a></p>
 </div>
 <div class="social-share social--transparent text-white">
