--- a/ver/join-us.html
+++ b/ver/join-us.html
@@ -585,7 +585,7 @@
 
 <!-- Use the minified version files listed below for better performance and remove the files listed above -->
 
-<script data-cfasync="false" src="/web/20240721071703js_/https://ltec-group.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://web.archive.org/web/20240721071703js_/https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/plugins.min.js"></script>
+<script data-cfasync="false" src="https://ltec-group.vercel.app/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://web.archive.org/web/20240721071703js_/https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/plugins.min.js"></script>
 <!-- REVOLUTION JS FILES -->
 <script src="https://web.archive.org/web/20240721071703js_/https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.tools.min.js"></script>
 <!-- SLIDER REVOLUTION 5.0 EXTENSIONS -->
