--- a/ver/privacy-policy.html
+++ b/ver/privacy-policy.html
@@ -355,7 +355,7 @@
 
 <h4>Contact Us</h4>
 <p>If you have any questions about this privacy policy or our practices, please contact us at:</p>
-<p>Email: <a href="mailto:info@ltec-group.com">info@ltec-group.com</a><br>
+<p>Email: <a href="mailto:info@ltec-group.vercel.app">info@ltec-group.vercel.app</a><br>
 Phone: <a href="tel:+16196142440">+1.619.614.2440</a></p>
 
 <h4>Terms of Use</h4>
@@ -415,7 +415,7 @@ Phone: <a href="tel:+16196142440">+1.619.614.2440</a></p>
 <div class="footer-address">
 <div class="bk-hover">
 <p>809 Bowsprit Rd Ste 105<br>Chula Vista CA 91914</p>
-<p><a href="mailto:info@ltec-group.com">info@ltec-group.com</a></p>
+<p><a href="mailto:info@ltec-group.vercel.app">info@ltec-group.vercel.app</a></p>
 <p><a href="tel:+16196142440">+1.619.614.2440</a></p>
 </div>
 <div class="social-share social--transparent text-white">
