--- a/ver/about-us.html
+++ b/ver/about-us.html
@@ -477,7 +477,7 @@ We measure our success by the value we create for our customers, the growth we d
                         <div class="col-lg-12">
                             <!-- Start Single Progress -->
                             <div class="radial-progress-single progress-flex mt--40" id="what-we-stand-for">
-                                <img src="ltec-group.com/assets/img/company_values/What_we_stand_for_resize-300-300.jpg" class="img-fluid" style="">
+                                <img src="ltec-group.vercel.app/assets/img/company_values/What_we_stand_for_resize-300-300.jpg" class="img-fluid" style="">
                                 <div class="contant pl--30 pl_mobile--5 pt_mobile--30">
                                     <h5 class="heading heading-h5">WHAT WE STAND FOR</h5>
                                     <p class="bk_pra mt--30_">
@@ -492,7 +492,7 @@ We measure our success by the value we create for our customers, the growth we d
                             <!-- End Single Progress -->
                             <!-- Start Single Progress -->
                             <div class="radial-progress-single progress-flex mt--80" id="diversity-inclusion">
-                                <img src="ltec-group.com/assets/img/company_values/Diversity_resize-300-300.jpg" class="img-fluid" style="">
+                                <img src="ltec-group.vercel.app/assets/img/company_values/Diversity_resize-300-300.jpg" class="img-fluid" style="">
                                 <!-- <div class="radial-progress" data-percent="100" data-bar-color="#0038E3"
                                     data-track-color="#eeeeee">
                                     <div class="circle-text">
@@ -519,7 +519,7 @@ We measure our success by the value we create for our customers, the growth we d
                             <!-- End Single Progress -->
                             <!-- Start Single Progress -->
                             <div class="radial-progress-single progress-flex mt--80" id="culture">
-                                <img src="ltec-group.com/assets/img/company_values/Culture_resize-300-300.jpg" class="img-fluid" style="">
+                                <img src="ltec-group.vercel.app/assets/img/company_values/Culture_resize-300-300.jpg" class="img-fluid" style="">
                                 <div class="contant pl--30 pl_mobile--5 pt_mobile--30">
                                     <h5 class="heading heading-h5">CULTURE</h5>
                                     <p class="bk_pra mt--30_">
