--- a/ver/about-us.html
+++ b/ver/about-us.html
@@ -7,20 +7,20 @@
 <meta name="description" content="LTEC">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Favicon -->
-<link rel="shortcut icon" href="assets/img/favicon_png-old-/file/themes-assets/brook/assets_1.0.27/img/favicon.png" type="image/x-icon">
-<link rel="apple-touch-icon" href="assets/img/favicon-old-/file/themes-assets/brook/assets_1.0.27/img/icon.png">
-<script src="file/themes-assets/brook/assets_1.0.27/js/vendor/vendor.min.js"></script>
+<link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
+<link rel="apple-touch-icon" href="../assets/img/icon.png">
+<script src="../file/themes-assets/brook/assets_1.0.27/js/vendor/vendor.min.js"></script>
 <!-- <link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
 <link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/plugins.css"> -->
 <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-<link rel="stylesheet" href="file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
-<link rel="stylesheet" href="file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
-<link rel="stylesheet" href="file/themes-assets/brook/assets_1.0.27/css/plugins.css">
-<link rel="stylesheet" href="file/themes-assets/brook/assets_1.0.27/css/style.css">
+<link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
+<link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
+<link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/plugins.css">
+<link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/style.css">
 <!-- Custom Styles -->
-<script defer src="releases/v5.15.4/js/all.js"></script>
-<link rel="stylesheet" href="assets/css/estilos_t-1721546192.css">
+<script defer src="../releases/v5.15.4/js/all.js"></script>
+<link rel="stylesheet" href="../assets/css/estilos_t-1721546192.css">
 </head>
 <body class="template-color-ltec">
 <!--[if lte IE 9]>
@@ -28,7 +28,7 @@
 <![endif]-->
 <!-- Add your site or application content here -->
 <div id="page-preloader" class="page-loading clearfix"><div class="page-load-inner"><div class="preloader-wrap"><div class="wrap-2">
-<div class=""><img src="assets/img/logo.png" alt="LTEC"></div>
+<div class=""><img src="../assets/img/logo.png" alt="LTEC"></div>
 </div></div></div></div>
 <!-- Wrapper -->
 <div id="wrapper" class="wrapper all-wrapper">
@@ -42,8 +42,8 @@
 <div class="header-left">
 <div class="logo">
 <a href="/" class="">
-<img src="assets/img/logo_w_h_simple.png" class="logo_azul" style="max-height: 80px;" alt="LTEC">
-<img src="assets/img/logo.png" class="logo_blanco" style="display: none; max-height: 80px;" alt="LTEC">
+<img src="../assets/img/logo_w_h_simple.png" class="logo_azul" style="max-height: 80px;" alt="LTEC">
+<img src="../assets/img/logo.png" class="logo_blanco" style="display: none; max-height: 80px;" alt="LTEC">
 </a>
 </div>
 <div class="mainmenu-wrapper  have-not-flex d-none d-lg-block pl--40">
@@ -189,7 +189,7 @@
 <div class="mobileheader">
 <div class="logo">
 <a href="/">
-<img src="assets/img/logo.png" style="max-height: 80px;">
+<img src="../assets/img/logo.png" style="max-height: 80px;">
 </a>
 </div>
 <a class="mobile-close" href="#"></a>
@@ -682,8 +682,8 @@ We measure our success by the value we create for our customers, the growth we d
 <!-- Use the minified version files listed below for better performance and remove the files listed above -->
 <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="file/themes-assets/brook/assets_1.0.27/js/plugins.min.js"></script>
 <!-- REVOLUTION JS FILES -->
-<script src="file/themes-assets/brook/assets_1.0.27/js/revolution.tools.min.js"></script>
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.tools.min.js"></script>
 <!-- SLIDER REVOLUTION 5.0 EXTENSIONS -->
-<script src="file/themes-assets/brook/assets_1.0.27/js/revolution.extension.min.js"></script>
-<script src="assets/js/main_t-1721546192.js"></script>
-<script src="file/themes-assets/brook/assets_1.0.27/js/revoulation.js"></script>
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.extension.min.js"></script>
+<script src="../assets/js/main_t-1721546192.js"></script>
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revoulation.js"></script>
