--- a/ver/about-us.html
+++ b/ver/about-us.html
@@ -680,10 +680,10 @@ We measure our success by the value we create for our customers, the growth we d
 <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.slideanims.min.js"></script>
 <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.video.min.js"></script> -->
 <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-<script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="file/themes-assets/brook/assets_1.0.27/js/plugins.min.js"></script>
+<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../file/themes-assets/brook/assets_1.0.27/js/plugins.min.js"></script>
 <!-- REVOLUTION JS FILES -->
 <script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.tools.min.js"></script>
 <!-- SLIDER REVOLUTION 5.0 EXTENSIONS -->
 <script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.extension.min.js"></script>
-<script src="../assets/js/main_t-1721546192.js"></script>
+<script src="../assets/js/main_t-1721546200.js"></script>
 <script src="../file/themes-assets/brook/assets_1.0.27/js/revoulation.js"></script>
