--- a/ver/about-us.html
+++ b/ver/about-us.html
@@ -301,7 +301,7 @@
 <div class="col-lg-12 col-xl-6 col-12">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="assets/img/about-us/icon_prof_team.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto; /*  */">
+<img src="../assets/img/about-us/icon_prof_team.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
 </div>
 <div class="content">
 <h4 class="text-white">Trust and Integrity</h4>
@@ -316,7 +316,7 @@ The foundation of our company. We believe in building strong relationships with 
 <div class="col-lg-12 col-xl-6 col-12 mt_lg--40 mt_md--30 mt_sm--30">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="assets/img/about-us/icon_smart_services.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto; /*  */">
+<img src="../assets/img/about-us/icon_smart_services.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
 </div>
 <div class="content">
 <h4 class="text-white">Teamwork</h4>
@@ -331,7 +331,7 @@ The heart of our company. We encourage a collaborative and inclusive environment
 <div class="col-lg-12 col-xl-6 col-12 mt--70 mt_lg--40 mt_md--30 mt_sm--30">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="assets/img/about-us/icon_smart_wortk.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto; /*  */">
+<img src="../assets/img/about-us/icon_smart_wortk.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
 </div>
 <div class="content">
 <h4 class="text-white">Growth Mindset</h4>
@@ -346,7 +346,7 @@ We believe that our abilities and intelligence can be developed through dedicati
 <div class="col-lg-12 col-xl-6 col-12 mt--70 mt_lg--40 mt_md--30 mt_sm--30">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="assets/img/about-us/icon_great_support.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto; /*  */">
+<img src="../assets/img/about-us/icon_great_support.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
 </div>
 <div class="content">
 <h4 class="text-white">Results</h4>
@@ -456,6 +456,7 @@ We measure our success by the value we create for our customers, the growth we d
 </div></div>
  <!-- Start Work area -->
             <div class="brook-whatdo-area ptb--100 ptb-md--80 ptb-sm--60 bg_color--1">
+{{ ... }}
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
@@ -477,7 +478,7 @@ We measure our success by the value we create for our customers, the growth we d
                         <div class="col-lg-12">
                             <!-- Start Single Progress -->
                             <div class="radial-progress-single progress-flex mt--40" id="what-we-stand-for">
-                                <img src="ltec-group.vercel.app/assets/img/company_values/What_we_stand_for_resize-300-300.jpg" class="img-fluid" style="">
+                                <img src="../assets/img/company_values/What_we_stand_for_resize-300-300.jpg" class="img-fluid" style="">
                                 <div class="contant pl--30 pl_mobile--5 pt_mobile--30">
                                     <h5 class="heading heading-h5">WHAT WE STAND FOR</h5>
                                     <p class="bk_pra mt--30_">
@@ -492,7 +493,7 @@ We measure our success by the value we create for our customers, the growth we d
                             <!-- End Single Progress -->
                             <!-- Start Single Progress -->
                             <div class="radial-progress-single progress-flex mt--80" id="diversity-inclusion">
-                                <img src="ltec-group.vercel.app/assets/img/company_values/Diversity_resize-300-300.jpg" class="img-fluid" style="">
+                                <img src="../assets/img/company_values/Diversity_resize-300-300.jpg" class="img-fluid" style="">
                                 <!-- <div class="radial-progress" data-percent="100" data-bar-color="#0038E3"
                                     data-track-color="#eeeeee">
                                     <div class="circle-text">
@@ -519,7 +520,7 @@ We measure our success by the value we create for our customers, the growth we d
                             <!-- End Single Progress -->
                             <!-- Start Single Progress -->
                             <div class="radial-progress-single progress-flex mt--80" id="culture">
-                                <img src="ltec-group.vercel.app/assets/img/company_values/Culture_resize-300-300.jpg" class="img-fluid" style="">
+                                <img src="../assets/img/company_values/Culture_resize-300-300.jpg" class="img-fluid" style="">
                                 <div class="contant pl--30 pl_mobile--5 pt_mobile--30">
                                     <h5 class="heading heading-h5">CULTURE</h5>
                                     <p class="bk_pra mt--30_">
