--- a/ver/services-land-surveying.html
+++ b/ver/services-land-surveying.html
@@ -8,8 +8,8 @@
 <meta name="description" content="LTEC Land Surveying Services - Professional land surveying solutions including A.L.T.A. surveying, topographic surveying, lot subdivision, and more.">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Favicon -->
-<link rel="shortcut icon" href="../assets/img/favicon_png-old-/file/themes-assets/brook/assets_1.0.27/img/favicon.png" type="image/x-icon">
-<link rel="apple-touch-icon" href="../assets/img/favicon-old-/file/themes-assets/brook/assets_1.0.27/img/icon.png">
+<link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
+<link rel="apple-touch-icon" href="../assets/img/logo.png">
 <script src="../file/themes-assets/brook/assets_1.0.27/js/vendor/vendor.min.js"></script>
 <!-- Use the minified version files listed below for better performance and remove the files listed above -->
 <link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
