--- a/ver/services-planning.html
+++ b/ver/services-planning.html
@@ -7,8 +7,8 @@
 <meta name="description" content="LTEC">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Favicon -->
-<link rel="shortcut icon" href="../assets/img/favicon_png-old-/file/themes-assets/brook/assets_1.0.27/img/favicon.png" type="image/x-icon">
-<link rel="apple-touch-icon" href="../assets/img/favicon-old-/file/themes-assets/brook/assets_1.0.27/img/icon.png">
+<link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
+<link rel="apple-touch-icon" href="../assets/img/logo.png">
 <script src="../file/themes-assets/brook/assets_1.0.27/js/vendor/vendor.min.js"></script>
 <!-- <link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
@@ -398,7 +398,7 @@
 </ul></div>
 <!-- <div class="ft-instagram-list"><div class="instagram-grid-wrap">
 <div class="item-grid grid-style--1">
-<div class="thumb"><a href="#"><img src="../assets/img/logo_w_v_simple.png" alt=""></a></div>
+<div class="thumb"><a href="#"><img src="../assets/img/logo_w_h_simple.png" alt="LTEC"></a></div>
 </div>
 </div></div> -->
 </div></div>
