css images fixed

--- a/ver/contact.html
+++ b/ver/contact.html
@@ -25,7 +25,7 @@
 <![endif]-->
 <!-- Add your site or application content here -->
 <div id="page-preloader" class="page-loading clearfix"><div class="page-load-inner"><div class="preloader-wrap"><div class="wrap-2">
-<div class=""><img src="../assets/img/logo.png" alt="LTEC"></div>
+<div class=""><img src="../assets/img/logo.png" alt="LTEC" style="max-height: 100px;"></div>
 </div></div></div></div>
 <!-- Wrapper -->
 <div id="wrapper" class="wrapper all-wrapper">
@@ -186,7 +186,7 @@
 <div class="mobileheader">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo.png" style="max-height: 80px;">
+<img src="../assets/img/logo.png" style="max-height: 80px;" alt="LTEC">
 </a>
 </div>
 <a class="mobile-close" href="#"></a>
@@ -402,7 +402,7 @@
 <div class="footer-widget text-var--2">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;">
+<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;" alt="LTEC">
 </a>
 </div>
 <div class="footer-inner">
@@ -483,7 +483,7 @@
 <!--// Footer -->
 <div class="whatsapp-container" style="display: none;">
 <a target="blank" href="https://wa.me/16193026765?text=I want more information about the services">
-<img class="whatsapp-btn" src="../assets/img/whatsapp.png">
+<img class="whatsapp-btn" src="../assets/img/whatsapp.png" alt="Chat on WhatsApp">
 </a>
 </div>
 <!--// Wrapper -->
