--- a/ver/about-us.html
+++ b/ver/about-us.html
@@ -28,7 +28,7 @@
 <![endif]-->
 <!-- Add your site or application content here -->
 <div id="page-preloader" class="page-loading clearfix"><div class="page-load-inner"><div class="preloader-wrap"><div class="wrap-2">
-<div class=""><img src="../assets/img/logo.png" alt="LTEC"></div>
+<div class=""><img src="../assets/img/logo.png" alt="LTEC" style="max-height: 100px;"></div>
 </div></div></div></div>
 <!-- Wrapper -->
 <div id="wrapper" class="wrapper all-wrapper">
@@ -189,7 +189,7 @@
 <div class="mobileheader">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo.png" style="max-height: 80px;">
+<img src="../assets/img/logo.png" style="max-height: 80px;" alt="LTEC">
 </a>
 </div>
 <a class="mobile-close" href="#"></a>
@@ -287,7 +287,7 @@
 .headroom--sticky.headroom--not-top .mainmenu-wrapper .page_nav ul.mainmenu li.lavel-1>a { color: #000000 !important; }
 </style>
 <!-- Start Breadcaump Area -->
-<div class="brook-breadcaump-area bg_image--81 fullscreen breadcaump-title-bar breadcaump-title-white d-flex align-items-center pt_md--70 pt_sm--100 pb_sm--50" data-black-overlay="1" style="background-image: url('assets/img/about-us/bg_about-us.jpg') !important;">
+<div class="brook-breadcaump-area bg_image--81 fullscreen breadcaump-title-bar breadcaump-title-white d-flex align-items-center pt_md--70 pt_sm--100 pb_sm--50" data-black-overlay="1" style="background-image: url('../assets/img/about-us/bg_about-us.jpg') !important;">
 <div class="container-fluid plr--180 plr_lg--100 plr_md--50 plr_sm--50">
 <div class="row align-items-center">
 <div class="col-lg-5">
@@ -301,7 +301,7 @@
 <div class="col-lg-12 col-xl-6 col-12">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="../assets/img/about-us/icon_prof_team.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
+<img src="../assets/img/about-us/icon_prof_team.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;" alt="Professional Team">
 </div>
 <div class="content">
 <h4 class="text-white">Trust and Integrity</h4>
@@ -316,7 +316,7 @@ The foundation of our company. We believe in building strong relationships with 
 <div class="col-lg-12 col-xl-6 col-12 mt_lg--40 mt_md--30 mt_sm--30">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="../assets/img/about-us/icon_smart_services.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
+<img src="../assets/img/about-us/icon_smart_services.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;" alt="Smart Services">
 </div>
 <div class="content">
 <h4 class="text-white">Teamwork</h4>
@@ -331,7 +331,7 @@ The heart of our company. We encourage a collaborative and inclusive environment
 <div class="col-lg-12 col-xl-6 col-12 mt--70 mt_lg--40 mt_md--30 mt_sm--30">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="../assets/img/about-us/icon_smart_wortk.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
+<img src="../assets/img/about-us/icon_smart_wortk.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;" alt="Smart Work">
 </div>
 <div class="content">
 <h4 class="text-white">Growth Mindset</h4>
@@ -346,7 +346,7 @@ We believe that our abilities and intelligence can be developed through dedicati
 <div class="col-lg-12 col-xl-6 col-12 mt--70 mt_lg--40 mt_md--30 mt_sm--30">
 <div class="single-motive-speach wow move-up">
 <div class="icon">
-<img src="../assets/img/about-us/icon_great_support.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;">
+<img src="../assets/img/about-us/icon_great_support.png" class="img-fluid iconito" style="max-height: 50px; height: auto; width: auto;" alt="Great Support">
 </div>
 <div class="content">
 <h4 class="text-white">Results</h4>
@@ -367,7 +367,7 @@ We measure our success by the value we create for our customers, the growth we d
 <!-- Start Work area -->
 <div class="brook-whatdo-area ptb--150 ptb-md--80 ptb-sm--60 bg_color--1" id="our-story"><div class="container">
 <div class="row align-items-center"><div class="col-lg-6">
-<div class="thumb"><img class="w-100" src="assets/img/about-us/img_our-history.jpg"></div>
+<div class="thumb"><img class="w-100" src="../assets/img/about-us/img_our-history.jpg" alt="Our History"></div>
 </div><div class="col-lg-6 mt_sm--40 mt_md--40">
 <div class="bk-title--default text-start">
 <h4 class="heading heading-h4 theme-color wow move-up">OUR STORY</h4>
@@ -400,7 +400,7 @@ We measure our success by the value we create for our customers, the growth we d
 </div></div></div>
 <div class="bkseparator--50"></div>
 <div class="row align-items-top"><div class="col-lg-3">
-<div class="thumb"><img class="w-100" src="assets/img/about-us/Luis_Tamayo.jpg"></div>
+<div class="thumb"><img class="w-100" src="../assets/img/about-us/Luis_Tamayo.jpg"></div>
 </div><div class="col-lg-9 mt_sm--40 mt_md--40">
 <div class="bk-title--default text-start">
 <h5 class="heading heading-h5 theme-color wow move-up">Luis E. Tamayo P.E.</h5>
@@ -450,7 +450,7 @@ We measure our success by the value we create for our customers, the growth we d
 <!-- End Single -->
 </div></div>
 <div class="col-lg-3">
-<div class="thumb"><img class="w-100" src="assets/img/about-us/Luis_Labrada.jpg"></div>
+<div class="thumb"><img class="w-100" src="../assets/img/about-us/Luis_Labrada.jpg"></div>
 </div>
 </div>
 </div></div>
@@ -618,7 +618,7 @@ We measure our success by the value we create for our customers, the growth we d
 </ul></div>
 <!-- <div class="ft-instagram-list"><div class="instagram-grid-wrap">
 <div class="item-grid grid-style--1">
-<div class="thumb"><a href="#"><img src="https://www.ltec-group.com/assets/img/logo_w_v_simple.png" alt=""></a></div>
+<div class="thumb"><a href="#"><img src="../assets/img/logo_w_v_simple.png" alt="LTEC Logo"></a></div>
 </div>
 </div></div> -->
 </div></div>
