--- a/ver/services-civil-engineering.html
+++ b/ver/services-civil-engineering.html
@@ -25,7 +25,7 @@
 <![endif]-->
 <!-- Add your site or application content here -->
 <div id="page-preloader" class="page-loading clearfix"><div class="page-load-inner"><div class="preloader-wrap"><div class="wrap-2">
-<div class=""><img src="../assets/img/logo.png" alt="LTEC"></div>
+<div class=""><img src="../assets/img/logo.png" alt="LTEC" style="max-height: 100px;"></div>
 </div></div></div></div>
 <!-- Wrapper -->
 <div id="wrapper" class="wrapper all-wrapper">
@@ -186,7 +186,7 @@
 <div class="mobileheader">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo.png" style="max-height: 80px;">
+<img src="../assets/img/logo.png" style="max-height: 80px;" alt="LTEC">
 </a>
 </div>
 <a class="mobile-close" href="#"></a>
