--- a/ver/services-planning.html
+++ b/ver/services-planning.html
@@ -28,7 +28,7 @@
 <![endif]-->
 <!-- Add your site or application content here -->
 <div id="page-preloader" class="page-loading clearfix"><div class="page-load-inner"><div class="preloader-wrap"><div class="wrap-2">
-<div class=""><img src="../assets/img/logo.png" alt="LTEC"></div>
+<div class=""><img src="../assets/img/logo.png" alt="LTEC" style="max-height: 100px;"></div>
 </div></div></div></div>
 <!-- Wrapper -->
 <div id="wrapper" class="wrapper all-wrapper">
@@ -350,7 +350,7 @@
 <div class="footer-widget text-var--2">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;">
+<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;" alt="LTEC">
 </a>
 </div>
 <div class="footer-inner">
