Inclusion de  imagenes faltantes en algunas secciones, our services, our company

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ Developing infrastructure solutions <mark style="background: transparent; color:
 <div class="svg-icon" id="svg-icon-2" data-svg-icon="assets/img/what_we_do/icon_planning.svg"></div>
 <div class="content">
 <h5 class="heading heading-h5">Planning</h5>
-<p class="gray" style="">Planning is an essential part of any construction project and requires careful consideration of factors such as cost, safety, environmental impact, and community needs.</p>
+<p class="gray" >Planning is an essential part of any construction project and requires careful consideration of factors such as cost, safety, environmental impact, and community needs.</p>
 </div>
 </div>
 </div>
@@ -451,15 +451,15 @@ Developing infrastructure solutions <mark style="background: transparent; color:
 <div class="align-right flex_end"><a class="service-btn" href="#"><span>More services</span> <i class="fa fa-arrow-right"></i></a></div>
 </div></div><!-- End Single Portfolio --><!-- Start Single Portfolio --><div class="col-lg-4 col-md-6 col-sm-6 col-12 move-up wow" data-wow-delay=".15s">
 <div class="portfolio with-caption mt_mobile--30 mt--30">
-<div class="thumb"><a href="ver/services-civil-engineering"><img src="assets/img/services/Grading_Plans_resize-351-240.jpg" alt="Grading Plans <br>Sediment and Erosion <br>Control MGMT"></a></div>
+<div class="thumb"><a href="ver/services-civil-engineering"><img src="assets/img/services/Grading_Plans.jpg" alt="Grading Plans <br>Sediment and Erosion <br>Control MGMT"></a></div>
 <div class="caption-bottom text-start"><div class="info">
-<h5 class="heading heading-h5"><a href="ver/services-civil-engineering">Grading Plans <br>Sediment and Erosion <br>Control MGMT</a></h5>
+<h5 class="heading heading-h5"><a href="ver/services-civil-engineering">Grading Plans<br>Sediment and Erosion<br>Control MGMT</a></h5>
 </div></div>
 <p class="bk_pra"></p>
 <div class="align-right flex_end"><a class="service-btn" href="#"><span>More services</span> <i class="fa fa-arrow-right"></i></a></div>
 </div></div><!-- End Single Portfolio --><!-- Start Single Portfolio --><div class="col-lg-4 col-md-6 col-sm-6 col-12 move-up wow" data-wow-delay=".15s">
 <div class="portfolio with-caption mt_mobile--30 mt--30">
-<div class="thumb"><a href="ver/services-civil-engineering"><img src="assets/img/services/Hydrology_Hydraulics_resize-351-240.jpg" alt="Hydrology & Hydraulics <br>Studies and Design <br>Stormwater Management"></a></div>
+<div class="thumb"><a href="ver/services-civil-engineering"><img src="assets/img/services/Hydrology_Hydraulics.jpg" alt="Hydrology & Hydraulics <br>Studies and Design <br>Stormwater Management"></a></div>
 <div class="caption-bottom text-start"><div class="info">
 <h5 class="heading heading-h5"><a href="ver/services-civil-engineering">Hydrology & Hydraulics <br>Studies and Design <br>Stormwater Management</a></h5>
 </div></div>
@@ -498,7 +498,7 @@ Developing infrastructure solutions <mark style="background: transparent; color:
 <div class="row row--0 align-items-center">
 <div class="col-lg-12 col-12 col-xl-6">
 <div class="thumbnail">
-<img class="w-100" src="assets/img/our_company_resize-951-800-quality-100.jpg" alt="OUR COMPANY">
+<img class="w-100" src="assets/img/our_company/our_companys.jpg" alt="OUR COMPANY">
 </div>
 </div>
 <div class="col-lg-12 col-12 col-xl-6 ptb-lg--60 ptb-md--60 ptb-sm--60">
