add and modification in services infrastructure section

--- a/ver/services-infrastructure copy.html
+++ b/ver/services-infrastructure copy.html
@@ -322,7 +322,7 @@
 <div class="col-lg-4 col-md-6 col-sm-12 col-12"><div class="testimonial testimonial_style--1"><div class="content"><strong>PS&E; (Plans, Specifications & Estimates) Documents</strong></div></div></div>
 <h3 class="text-center pt--20 text-primary">Planning & Schematic Design</h3>
 <div class="col-lg-4 col-md-6 col-sm-12 col-12"><div class="testimonial testimonial_style--1"><div class="content"><strong>Corridor Planning</strong></div></div></div>
-<div class="col-lg-4 col-md-6 col-sm-12 col-12"><div class="testimonial testimonial_style--1"><div class="content"><strong>Feasibility Stuides</strong></div></div></div>
+<div class="col-lg-4 col-md-6 col-sm-12 col-12"><div class="testimonial testimonial_style--1"><div class="content"><strong>Feasibility Studies</strong></div></div></div>
 <div class="col-lg-4 col-md-6 col-sm-12 col-12"><div class="testimonial testimonial_style--1"><div class="content"><strong>Route Studies</strong></div></div></div>
 <div class="col-lg-4 col-md-6 col-sm-12 col-12"><div class="testimonial testimonial_style--1"><div class="content"><strong>Schematic Design</strong></div></div></div>
 </div>
